feat: handle sheet upload
